# storage-analyzer

./: .gitignore  .replit  LICENSE  README.md  app.go  filesize_unix.go  filesize_windows.go  folder_scanner.py  go.mod  go.sum  gui_components.py  issymlink_unix.go  issymlink_windows.go  main.go  openfile.go  openfile_darwin.go  openfile_windows.go  pyproject.toml  scanner.go  scanner_test.go  storage_analyzer.py  wails.json
.github/workflows/: release.yml
frontend/: index.html  package-lock.json  package.json  package.json.md5
frontend/src/: App.svelte  style.css
frontend/src/lib/components/: FileTree.svelte
frontend/src/lib/stores/: fileTreeStore.js
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
storage_analyzer/: __init__.py  folder_scanner.py  gui_components.py  storage_analyzer.py
tools/: take_screenshot.py
