[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "storage-analyzer"
version = "0.1.0"
description = "A Python-based storage analysis application for Windows with interactive GUI"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Storage Analyzer Developer" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "hatchling>=1.27.0",
]

[project.urls]
Homepage = "https://github.com/username/storage-analyzer"
Repository = "https://github.com/username/storage-analyzer.git"

[tool.hatch.build.targets.wheel]
packages = ["storage_analyzer"]

[project.scripts]
storage-analyzer = "storage_analyzer.storage_analyzer:main"
