[tool.poetry]
name = "storage-analyzer"
version = "0.1.0"
description = "A Python-based storage analysis application for Windows with interactive GUI"
authors = ["Daisuke (yanother) Maki"]
readme = "README.md"
packages = [{include = "storage_analyzer"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
storage-analyzer = "storage_analyzer.storage_analyzer:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"