[project]
name = "storage-analyzer"
version = "0.1.0"
description = "A Python-based storage analysis application for Windows with interactive GUI"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Daisuke (yanother) Maki" }
]
license = { text = "MIT" }
dependencies = []

[project.scripts]
storage-analyzer = "storage_analyzer.storage_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"